--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- menu -->
             <nav class="row navbar navbar-expand-sm bg-white">
               <div class="col">
-                <a class="navbar-brand ml-3 text-green d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                <a class="title2 navbar-brand ml-3 text-green d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                <a class="navbar-brand ml-3 d-none d-md-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                <a class="title2 navbar-brand ml-3 d-block d-md-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
               </div>
               <div class="col d-none d-sm-inline-block">
                 <ul class="navbar-nav mt-2 float-right">
@@ -276,7 +276,7 @@
         <div class="w-100"></div>
         <div class="col-md-6 col-lg-4 d-flex align-items-center">
 
-          <div class="tarjeta row">
+          <div class="tarjeta row green">
             <!-- clase tajerta -->
             <div class="col-md-2">
               <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
@@ -306,7 +306,7 @@
               <div class="well well-sm">
                 <form class="form-horizontal" method="post">
                   <fieldset>
-                    <legend class="text-center header">¿Tiene una pregunta?</legend>
+                    <legend class="text-center header title2">¿Tiene una pregunta?</legend>
 
                     <div class="form-group">
                       <input required id="fname" name="name" type="text" placeholder="Nombre completo" class="form-control">
