--- a/politica.html
+++ b/politica.html
@@ -23,8 +23,8 @@
                         <!-- menu -->
                         <nav class="row navbar navbar-expand-sm bg-white">
                             <div class="col">
-                                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="#"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="#"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
+                                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
                             </div>
                             <div class="col d-none d-md-inline-block">
                                 <ul class="navbar-nav mt-2 float-right">
@@ -69,8 +69,8 @@
                 <!-- texto main -->
     </section>
 
-    <section class="container" id="politica">
-        <div class="row justify-content-around mt-4">
+    <section class="container-fluid p-0" id="politica">
+        <div class="row justify-content-around mt-4 bg-dark">
 
             <div class="col-12 mb-3 text-center title font-weight-bold">
                 <p class="text-uppercase">Políticas de Calidad</p>
@@ -104,7 +104,7 @@
     </section>
 
     <main>
-        <div class="container">
+        <div class="container bg-dark">
             <h3 class="title2">
                 PRINCIPIOS CORPORATIVOS
             </h3>
