--- a/acerca.html
+++ b/acerca.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="col-7 col-xl-6 pr-4">
-                <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
+                <p class="text-justify green">Somos una organización sin ánimo de lucro, de interés social, perteneciente al
                     sector
                     de la economía
                     solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y
@@ -105,9 +105,9 @@
         </div>
         <hr>
 
-        <div class="row mt-4">
+        <div class="row mt-3 pb-3 bg-dark">
             <div class="col" data-aos="fade-right">
-                <h3 class="display-4 text-center">Visión</h3>
+                <h3 class="title text-center">Visión</h3>
                 <p class="text-justify">
                     La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del
                     sector de
@@ -119,7 +119,7 @@
                 </p>
             </div>
             <div class="col" data-aos="fade-left">
-                <h3 class="display-4 text-center">Misión</h3>
+                <h3 class="title text-center">Misión</h3>
                 <p class="text-justify">
                     Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
                     promoviendo
