--- a/turismo.html
+++ b/turismo.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <link rel="icon" type="image/png" href="img/logo.png" />
 
     <title>COOMUSTRANSTUR</title>
