--- a/alianzas.html
+++ b/alianzas.html
@@ -100,7 +100,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante El Buen Gusto</h4>
+              <h4 class="green">Restaurante El Buen Gusto</h4>
               <br>
 
               Propietario: STELLA <br>
@@ -133,7 +133,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel y Restaurante Gabriela Sinisterra</h4>
+              <h4 class="green">Hotel y Restaurante Gabriela Sinisterra</h4>
               <br>
 
               Propietario: ? <br>
@@ -165,7 +165,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel y Restaurante David</h4>
+              <h4 class="green">Hotel y Restaurante David</h4>
               <br>
 
               Propietario: ? <br>
@@ -197,7 +197,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante las delicias de Magas</h4>
+              <h4 class="green">Restaurante las delicias de Magas</h4>
               <br>
 
               Propietario: ? <br>
@@ -229,7 +229,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel y restaurante Mayesty</h4>
+              <h4 class="green">Hotel y restaurante Mayesty</h4>
               <br>
 
               Propietario: ? <br>
@@ -261,7 +261,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Cabañas y Restaurante Genaro</h4>
+              <h4 class="green">Cabañas y Restaurante Genaro</h4>
               <br>
 
               Propietario: ? <br>
@@ -293,7 +293,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel el Edén</h4>
+              <h4 class="green">Hotel el Edén</h4>
               <br>
 
               Propietario: ? <br>
@@ -325,7 +325,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Bebidas y Dulcería Sabor Porteño</h4>
+              <h4 class="green">Bebidas y Dulcería Sabor Porteño</h4>
               <br>
 
               Propietario: ? <br>
@@ -357,7 +357,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel y restaurante San Cipriano</h4>
+              <h4 class="green">Hotel y restaurante San Cipriano</h4>
               <br>
 
               Propietario: ? <br>
@@ -389,7 +389,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Posada Don José</h4>
+              <h4 class="green">Posada Don José</h4>
               <br>
 
               Propietario: ? <br>
@@ -421,7 +421,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel Ivankar</h4>
+              <h4 class="green">Hotel Ivankar</h4>
               <br>
 
               Propietario: ? <br>
@@ -453,7 +453,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Hotel Ivankar</h4>
+              <h4 class="green">Hotel Ivankar</h4>
               <br>
 
               Propietario: ? <br>
@@ -485,7 +485,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Fuente de sodas y restaurante El Sazón de Chilin</h4>
+              <h4 class="green">Fuente de sodas y restaurante El Sazón de Chilin</h4>
               <br>
 
               Propietario: ? <br>
@@ -517,7 +517,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Fuente de sodas y restaurante Doña Doris</h4>
+              <h4 class="green">Fuente de sodas y restaurante Doña Doris</h4>
               <br>
 
               Propietario: ? <br>
@@ -549,7 +549,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Tienda San Cipriano</h4>
+              <h4 class="green">Tienda San Cipriano</h4>
               <br>
 
               Propietario: ? <br>
@@ -581,7 +581,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Spa y artículos de playa ébano</h4>
+              <h4 class="green">Spa y artículos de playa ébano</h4>
               <br>
 
               Propietario: ? <br>
@@ -613,7 +613,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Salvavidas y ﬂotadores el cholo. Kits de natación</h4>
+              <h4 class="green">Salvavidas y ﬂotadores el cholo. Kits de natación</h4>
               <br>
 
               Propietario: ? <br>
@@ -645,7 +645,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Servicio de guia turístico a San Cipriano y Córdoba</h4>
+              <h4 class="green">Servicio de guia turístico a San Cipriano y Córdoba</h4>
               <br>
 
               Propietario: ? <br>
@@ -677,7 +677,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Miscelánea y Variedades Jazmín</h4>
+              <h4 class="green">Miscelánea y Variedades Jazmín</h4>
               <br>
 
               Propietario: ? <br>
@@ -709,7 +709,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Artesanías Macano</h4>
+              <h4 class="green">Artesanías Macano</h4>
               <br>
 
               Propietario: ? <br>
