--- a/politica.html
+++ b/politica.html
@@ -14,7 +14,7 @@
     <script src="js/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="">
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0" id="">
         <div class="">
@@ -71,14 +71,14 @@
     </section>
 
     <section class="container-fluid p-0" id="politica">
-        <div class="row justify-content-around mt-4 bg-dark">
+        <div class="row justify-content-around mt-4">
 
             <div class="col-12 mb-3 text-center title font-weight-bold">
                 <p class="text-uppercase">Políticas de Calidad</p>
             </div>
 
             <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
-                <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las
+                <p class="text-justify text-primary">Estamos mejorando continuamente nuestros servicios para satisfacer las
                     necesidades y
                     expectativas
                     de
@@ -90,8 +90,10 @@
             <div class="w-100"></div>
             <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right"
                 data-aos-duration="1200">
-                <strong> Valores corporativos:</strong>
-                <ul class="list-unstyled">
+                <h5>
+                    <strong class="text-success"> Valores corporativos:</strong>
+                </h5>
+                <ul class="list-unstyled text-secondary">
                     <li>Ayuda mutua</li>
                     <li>Responsabilidad</li>
                     <li>Honestidad </li>
@@ -103,14 +105,15 @@
             </div>
         </div>
     </section>
-
-    <main>
-        <div class="container bg-dark">
+    
+    <main class="bg-dark">
+        <hr>
+        <div class="container pb-5">
             <h3 class="title2">
                 PRINCIPIOS CORPORATIVOS
             </h3>
 
-            <ol class="text-justify">
+            <ol class="text-justify m-0">
                 <li>
                     Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas para
                     todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las responsabilidades que
@@ -156,19 +159,12 @@
                 </li>
             </ol>
 
-
-
-
-
-
-
-
         </div>
     </main>
 
 
     <!-- Footer  -->
-    <section id="footer" class="mt-4">
+    <section id="footer" class="">
         <div class="row">
             <div class="col-12 text-center">
                 <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
