--- a/alianzas.html
+++ b/alianzas.html
@@ -752,7 +752,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Restaurante y Hotel El Buen Gusto</h5>
+            <h5 class="modal-title green" id="exampleModalLabel">Restaurante y Hotel El Buen Gusto</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
