--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <title>COOMUSTRANSTUR</title>
 
+  <link rel="stylesheet" href="css/my-slider.css"/>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/aos.css">
 
@@ -189,7 +190,7 @@
             <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
           </div>
 
-          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
+          <!-- <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
             <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
 
             <div class="">
@@ -211,7 +212,26 @@
             <div class="">
               <p>Otro lugar más</p>
             </div>
-          </div>
+          </div> -->
+
+          <div class="ism-slider" data-transition_type="zoom" data-interval="3000" data-radio_type="thumbnail" id="my-slider">
+              <ol>
+                <li>
+                  <img src="img/bg1.jpg">
+                  <div class="ism-caption ism-caption-0">San Cripriano</div>
+                </li>
+                <li>
+                  <img src="img/bg3.jpg">
+                  <div class="ism-caption ism-caption-0">Córdoba</div>
+                </li>
+                <li>
+                  <img src="img/bg4.jpg">
+                  <div class="ism-caption ism-caption-0">B/Tura</div>
+                </li>
+              </ol>
+            </div>
+            <p class="d-none ism-badge" id="my-slider-ism-badge"><a class="ism-link" href="http://imageslidermaker.com" rel="nofollow">generated with ISM</a></p>
+            
 
         </div>
       </div>
@@ -378,6 +398,7 @@
   <script src="js/holder.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/parallax.js"></script>
+  <script src="js/ism-2.2.min.js"></script>
   <script src="js/app.js"></script>
 
   <script>
