--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </section>
 
     <section id="biodiversidad">
-      <div class="container-fluid">
+      <div class="container-fluid p-0">
         <div class="d-flex justify-content-center">
           <img class="cabecita2" src="img/biodiversidad.png" alt="">
         </div>
