--- a/acerca.html
+++ b/acerca.html
@@ -104,9 +104,8 @@
             <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
             </div>
         </div>
-        <hr>
-
-        <div class="row mt-3 pb-3 bg-dark">
+        
+        <div class="row mt-3 pb-3 pt-2 bg-dark">
             <div class="col" data-aos="fade-right">
                 <h3 class="title text-center">Visión</h3>
                 <p class="text-justify">
