--- a/acerca.html
+++ b/acerca.html
@@ -134,7 +134,7 @@
 
 
     <!-- Footer  -->
-    <section id="footer" class="mt-4">
+    <section id="footer" class="">
         <div class="row">
             <div class="col-12 text-center">
                 <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
