--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto" id="menu">
                   <li class="nav-item active">
                     <a class="nav-link" href="#nosotros">Guía turística</a>
                   </li>
