--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <title>COOMUSTRANSTUR</title>
 
-  <link rel="stylesheet" href="css/my-slider.css"/>
+  <link rel="stylesheet" href="css/my-slider.css" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/aos.css">
 
@@ -215,23 +215,24 @@
           </div> -->
 
           <div class="ism-slider" data-transition_type="zoom" data-interval="3000" data-radio_type="thumbnail" id="my-slider">
-              <ol>
-                <li>
-                  <img src="img/bg1.jpg">
-                  <div class="ism-caption ism-caption-0">San Cripriano</div>
-                </li>
-                <li>
-                  <img src="img/bg3.jpg">
-                  <div class="ism-caption ism-caption-0">Córdoba</div>
-                </li>
-                <li>
-                  <img src="img/bg4.jpg">
-                  <div class="ism-caption ism-caption-0">B/Tura</div>
-                </li>
-              </ol>
-            </div>
-            <p class="d-none ism-badge" id="my-slider-ism-badge"><a class="ism-link" href="http://imageslidermaker.com" rel="nofollow">generated with ISM</a></p>
-            
+            <ol>
+              <li>
+                <img src="img/bg1.jpg">
+                <div class="ism-caption ism-caption-0">San Cripriano</div>
+              </li>
+              <li>
+                <img src="img/bg3.jpg">
+                <div class="ism-caption ism-caption-0">Córdoba</div>
+              </li>
+              <li>
+                <img src="img/bg4.jpg">
+                <div class="ism-caption ism-caption-0">B/Tura</div>
+              </li>
+            </ol>
+          </div>
+          <p class="d-none ism-badge" id="my-slider-ism-badge"><a class="ism-link" href="http://imageslidermaker.com"
+              rel="nofollow">generated with ISM</a></p>
+
 
         </div>
       </div>
@@ -251,11 +252,11 @@
               Entre sus platos más reconocidos se encuentran los aborrajados de pescado, ensalada de calamar, camarón o
               langostinos; empanadas de jaiba; sopa de lentejas, gazapo, almejas y cangrejo; pusandao (caldo de bagre);
               quebrao (sancocho de carne serrana salada en cecina); pargo o corvina, cazuela de mariscos; chaupiza
-              (pescado pequeño) y huevos de piando, entre otros
+              (pescado pequeño) y huevos de piando, entre otros.
             </p>
           </div>
           <div class="col-12">
-              <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
+            <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
           </div>
         </div>
       </div>
@@ -264,14 +265,27 @@
 
 
 
-    <section id="cultira">
-      <div class="contaienr">
-        <div class="row">
+    <section id="cultura">
+      <div id="parallax2"></div>
+      <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
+        <div class="row text-center">
 
-          <div class="col mb-3 text-center title font-weight-bold">
-            <p class="text-uppercase">Cultura de la región pacífico</p>
+          <div class="col-12 mb-3 title  font-weight-bold">
+            <p class="text-uppercase">Cultura del pacífico</p>
           </div>
 
+          <div class="col">
+            <p class="text-justify">
+              La cultura de la región Pacífica de Colombia se destaca por ser afrocolombiana. Es una cultura muy
+              difundida en el litoral y expresada a través de su folclor e historia.
+
+              Las danzas, la música, la gastronomía e incluso la forma de vestir del chocoano, el valle caucano, el
+              nariñense y el caucano, se ven fuertemente marcadas por esta afrocolombianidad.
+            </p>
+          </div>
+          <div class="col-12">
+            <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
+          </div>
         </div>
       </div>
     </section>
