--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- Contenido interactivo -->
   <main>
-    <section id="noticias" class="container-fluid">
+    <section id="noticias" class="container-fluid bg-info">
 
       <div class="row justify-content-around">
 
@@ -190,30 +190,6 @@
             <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
           </div>
 
-          <!-- <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
-            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
-
-            <div class="">
-              <p>San Cipriano</p>
-            </div>
-          </div>
-
-          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
-            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
-
-            <div class="">
-              <p>Otro lugar</p>
-            </div>
-          </div>
-
-          <div class="col-sm-5 col-md-3 col-lg-2 tarjeta3">
-            <img class="img-fluid" src="holder.js/500x300?auto=yes" alt="">
-
-            <div class="">
-              <p>Otro lugar más</p>
-            </div>
-          </div> -->
-
           <div class="ism-slider" data-transition_type="zoom" data-interval="3000" data-radio_type="thumbnail" id="my-slider">
             <ol>
               <li>
@@ -240,7 +216,11 @@
 
     <section id="gastronomia">
       <div id="parallax1"></div>
+      <div class="d-flex justify-content-center justify-content-center">
+        <img class="cabecita2" src="img/gastronomia.png" alt="">
+      </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
+
         <div class="row text-center">
 
           <div class="col-12 mb-3 title  font-weight-bold">
@@ -265,9 +245,14 @@
 
 
 
-    <section id="cultura">
+    <section id="cultura" class="">
       <div id="parallax2"></div>
+      <div class="d-flex justify-content-center justify-content-center">
+        <img class="cabecita2" src="img/cultura.png" alt="">
+      </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
+
+
         <div class="row text-center">
 
           <div class="col-12 mb-3 title  font-weight-bold">
