--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           </div>
         </div>
 
-        <div class="col col-xl-6 tarjeta2 he">
-          <h3>Noticias</h3>
+        <div class="col col-xl-6 tarjeta2">
+          <h3 class="green">Noticias</h3>
 
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -135,7 +135,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 img-fluid" src="img/Sin título-2.svg" alt="First slide">
+                <img class="d-block img-fluid" src="img/Sin título-2.svg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 1</h5>
                   <p>El evento numero 1 en...</p>
@@ -167,13 +167,9 @@
           </div>
 
         </div>
-        <div class="col-sm-5 col-xl-5 tarjeta2">
-          <h3>Eventos</h3>
-
-          <div>
-            <a class="twitter-timeline" data-height="430" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
-              by TwitterDev</a>
-          </div>
+        <div class="col-sm-5 col-xl-5">
+          <a class="twitter-timeline" data-height="400" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets
+            by TwitterDev</a>
         </div>
 
       </div>
@@ -277,49 +273,17 @@
 
   </main>
 
-  <div class="container-fluid pl-0 pr-0 mb-5 mt-4">
-    <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
-      width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
-
   <!-- Contacto  -->
   <section id="contacto">
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row justify-content-around">
 
         <div class="col mb-3 text-center title font-weight-bold">
           <p class="text-uppercase">Contáctenos</p>
         </div>
 
-        <div class="w-100"></div>
-        <div class="col-md-6 col-lg-4 d-flex align-items-center">
-
-          <div class="tarjeta row green">
-            <!-- clase tajerta -->
-            <div class="col-md-2">
-              <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
-            </div>
-            <div class="col">
-              (57) 3148340811 <br>
-              (57) 3148302152 <br>
-              (57) 3155777327 <br>
-              <span><small>Lunes a viernes de 8am-6pm</small></span>
-            </div>
-
-            <div class="w-100">
-              <hr>
-            </div>
-            <div class="col-md-2">
-              <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-            </div>
-            <div class="col">
-              www.coomutranstur@hotmail.com
-            </div>
-          </div>
-
-        </div>
-        <div class="col-md-6 col-lg-8">
+        <div class="col-lg-5">
           <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
@@ -366,8 +330,40 @@
 
 
   <!-- Footer  -->
-  <section id="footer" class="mt-4">
+  <section class="footer">
     <div class="row">
+      <div class="col d-flex align-items-center p-0">
+        <div class="row">
+          <!-- clase tajerta -->
+          <div class="col-md-2">
+            <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
+          </div>
+          <div class="col">
+            (57) 3148340811 <br>
+            (57) 3148302152 <br>
+            (57) 3155777327 <br>
+            <span><small>Lunes a viernes de 8am-6pm</small></span>
+          </div>
+
+          <div class="w-100">
+            <hr>
+          </div>
+          <div class="col-md-2">
+            <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
+          </div>
+          <div class="col">
+            www.coomutranstur@hotmail.com
+          </div>
+        </div>
+      </div>
+      <div class="col p-0">
+        <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
+          width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+
+
+    <div id="footer" class="row">
       <div class="col-12 text-center">
         <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
       </div>
