--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
   <!-- Footer  -->
   <section class="footer">
     <div class="row">
-      <div class="col d-flex align-items-center p-0">
+
+      <div class="order-1 col-md-6 d-flex align-items-center justify-content-center p-0">
         <div class="row">
           <!-- clase tajerta -->
           <div class="col-md-2">
@@ -356,10 +357,12 @@
           </div>
         </div>
       </div>
-      <div class="col p-0">
+
+      <div class="order-0 col-md-6 p-0">
         <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
           width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
+
     </div>
 
 
