--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
 
   <!-- Footer  -->
   <section class="footer">
-    <div class="row">
+    <div class="row d-flex align-items-center justify-content-center p-0">
 
-      <div class="order-1 col-md-6 d-flex align-items-center justify-content-center p-0">
+      <div class="order-1 col-md-6">
         <div class="row">
           <!-- clase tajerta -->
           <div class="col-md-2">
