--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- Contenido interactivo -->
   <main>
-    <section id="noticias" class="container-fluid bg-info">
+    <section id="noticias" class="container-fluid">
 
       <div class="row justify-content-around">
 
