--- a/index.html
+++ b/index.html
@@ -279,8 +279,15 @@
     <div class="container-fluid">
       <div class="row justify-content-around">
 
-        <div class="col mb-3 text-center title font-weight-bold">
+        <div class="col-12 mb-3 text-center title font-weight-bold">
           <p class="text-uppercase">Contáctenos</p>
+        </div>
+
+        <div class="col d-flex align-items-center justify-content-center">
+          <div class="d-none d-lg-block" data-aos="fade-right" data-aos-duration="1000">
+            <p class="green">Hola a todos</p>
+          </div>
+
         </div>
 
         <div class="col-lg-5">
