--- a/index.html
+++ b/index.html
@@ -283,20 +283,25 @@
           <p class="text-uppercase">Contáctenos</p>
         </div>
 
-        <div class="col d-flex align-items-center justify-content-center">
-          <div class="d-none d-lg-block" data-aos="fade-right" data-aos-duration="1000">
-            <p class="green">Hola a todos</p>
+        <div class="col d-flex align-items-center ml-5 mr-5">
+
+          <div id="escrito" class="d-none d-md-block">
+            <div class="d-none d-md-block" data-aos="fade-right" data-aos-duration="1000">
+                <h3 class="title">Hola</h3>
+            </div>
+
+              <p id="typed" class="d-inline text-justify text-info"></p>
           </div>
 
         </div>
 
-        <div class="col-lg-5">
+        <div class="col-lg-6">
           <div class="tarjeta row">
             <div class="col-md-12">
               <div class="well well-sm">
                 <form class="form-horizontal" method="post">
                   <fieldset>
-                    <legend class="text-center header title2">¿Tiene una pregunta?</legend>
+                    <legend class="text-center header title2">Formulario de Contacto</legend>
 
                     <div class="form-group">
                       <input required id="fname" name="name" type="text" placeholder="Nombre completo" class="form-control">
@@ -404,10 +409,24 @@
   <script src="js/parallax.min.js"></script>
   <script src="js/parallax.js"></script>
   <script src="js/ism-2.2.min.js"></script>
+  <script src="js/typed.js"></script>
   <script src="js/app.js"></script>
 
   <script>
     AOS.init();
+
+    var texto= "Si aun no quedas satisfecho puedes probar en enviaros un mensaje por nuestros diversos medios de comunicacion:",
+    lista=["<ol> <li>Formulario de contacto</li> <li>Chat en línea</li> <li>Mensaje de Whatsapp</li> </ol>"];
+
+    new Typed('#typed', {
+      strings: [texto+lista],
+      startDelay: 1500,
+      typeSpeed: 40,
+      cursorChar: '_',
+      backSpeed: 20,
+      smartBackspace: false,
+      loop: false,
+    });
   </script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
