--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block img-fluid" src="img/Sin título-2.svg" alt="First slide">
+                <img class="d-block w-100 img-fluid" src="img/Sin título-2.svg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 1</h5>
                   <p>El evento numero 1 en...</p>
